Vandana, Sneha - Fixing build - create a jar for the web module