@@ -29,9 +29,20 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.9</version>
-                <configuration>
-                    <argLine>-agentpath:/home/vandanag/motech/ananya-delivery/ananya-kilkari-deploy/src/main/resources/faketime/libfaketime.so</argLine>
-                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <argLine>-XX:MaxPermSize=1024M</argLine>
+                            <argLine>-agentpath:/home/vandanag/motech/ananya-delivery/ananya-kilkari-deploy/src/main/resources/faketime/libfaketime.so</argLine>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        </configuration>
+                    </execution>
+                </executions>
+
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
